<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/poster_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ready"
            android:fontFamily="@font/my_bold_file"
            android:textColor="@color/title"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginVertical="50sp"
            android:layout_marginHorizontal="20sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_weight="1"
            android:fontFamily="@font/my_book_file"
            android:text="@string/describe2"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="100"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:paddingHorizontal="50dp">
            <ImageButton
                android:id="@+id/dogBtn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/dog"
                app:srcCompat="@drawable/dog"
                android:background="@drawable/login_button"
                android:layout_marginStart="25dp"/>
            <ImageButton
                android:id="@+id/catBtn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/cat"
                android:background="@drawable/login_button"
                app:srcCompat="@drawable/cat"
                android:layout_marginStart="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="100"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:paddingHorizontal="50dp">
            <ImageButton
                android:id="@+id/birdBtn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/bird"
                app:srcCompat="@drawable/bird"
                android:background="@drawable/login_button"
                android:layout_marginStart="25dp"/>
            <ImageButton
                android:id="@+id/fishBtn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/fish"
                app:srcCompat="@drawable/fish"
                android:background="@drawable/login_button"
                android:layout_marginStart="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="100"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:paddingHorizontal="50dp">
            <ImageButton
                android:id="@+id/plantBtn"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/plant"
                app:srcCompat="@drawable/plant"
                android:background="@drawable/login_button"
                android:layout_marginStart="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/title"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="100dp">
            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/home"
                android:background="@color/title"
                app:srcCompat="@drawable/home"/>
            <ImageButton
                android:id="@+id/accountBtn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/account"
                android:background="@color/title"
                app:srcCompat="@drawable/account" />
            <ImageButton
                android:id="@+id/basketBtn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/basket"
                android:background="@color/title"
                app:srcCompat="@drawable/basket"/>
            <ImageButton
                android:id="@+id/logoutBtn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/logout"
                android:background="@color/title"
                app:srcCompat="@drawable/logout"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>