<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetDetailsActivity"
    android:background="@drawable/poster_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/item_card"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dog_item"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/list_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                android:fontFamily="@font/my_bold_file"
                android:text="@string/dog_item" />

            <TextView
                android:id="@+id/list_item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:fontFamily="@font/my_book_file"
                android:layout_margin="10dp"
                android:text="@string/dog_item" />

            <Button
                android:id="@+id/chat"
                android:layout_width="280dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_bold_file"
                android:textSize="15sp"
                android:text="@string/contact" />

            <Button
                android:id="@+id/add"
                android:layout_width="280dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_bold_file"
                android:textSize="15sp"
                android:text="@string/add_basket" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/title"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/home"
            android:background="@color/title"
            app:srcCompat="@drawable/home"/>
        <ImageButton
            android:id="@+id/accountBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/account"
            android:background="@color/title"
            app:srcCompat="@drawable/account" />
        <ImageButton
            android:id="@+id/basketBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/basket"
            android:background="@color/title"
            app:srcCompat="@drawable/basket"/>
        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/logout"
            android:background="@color/title"
            app:srcCompat="@drawable/logout"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>