<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DogScrollActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rev"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/poster_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/title"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/home"
            android:background="@color/title"
            app:srcCompat="@drawable/home"/>
        <ImageButton
            android:id="@+id/accountBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/account"
            android:background="@color/title"
            app:srcCompat="@drawable/account" />
        <ImageButton
            android:id="@+id/basketBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/basket"
            android:background="@color/title"
            app:srcCompat="@drawable/basket"/>
        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/logout"
            android:background="@color/title"
            app:srcCompat="@drawable/logout"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>