<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/welcome"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:fontFamily="@font/my_bold_file"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:fontFamily="@font/my_book_file"/>

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/edit"
            android:ems="10"
            android:inputType="text"
            android:layout_marginVertical="15sp"
            android:minHeight="50dp"
            android:layout_marginHorizontal="15sp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            style="?android:attr/actionButtonStyle"
            android:background="@drawable/login_button"
            android:textStyle="normal"
            android:text="@string/log_continue"
            android:fontFamily="@font/my_medium_file"
            android:textSize="18sp"
            android:layout_marginVertical="15sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>